--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcq-react",
-  "homepage": "https://carboncs16.github.io/mcq-ibs/",
+  "homepage": "https://nitinmohanty1.github.io/VYUH-Round-1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
